--- a/appWeb/src/views/users/register.ejs
+++ b/appWeb/src/views/users/register.ejs
@@ -1,38 +1,68 @@
-<!DOCTYPE html>
-<html lang="en"></html>
-  <!--HEAD-->
-  <%- include('../partials/head') %>
-  <body>
-  
+<!--HEAD-->
+<%- include('../partials/head') %>
+
+
     <!-- Header -->
     <%- include('../partials/header')%>
 
-    <!-- Page content -->
-    <section class="form-register">
-        <h4>Completa tus datos</h4>
-        <main>
-            <section>
-                <form action="/register" method="POST" class="formregister"  enctype="multipart/form-data">
-                    <label> Nombre y Apellido</label>
-                    <input type="text" name="name" required placeholder="Nombre y apellido">
-                    <label>Email</label>
-                    <input type="email" name="email" required placeholder="Email">
-                    <label>Contraseña</label>
-                    <input type="password" name="password" required placeholder="Contraseña">
-                    <label>Confirmar contraseña</label>
-                    <input type="password" name="repassword" required placeholder="Confirmar Contraseña">
-                    <label>Fecha de Nacimiento</label>
-                    <input type="date" name="birth" required>
-                    <label>Seleccione Avatar</label>
-                    <input type="file" name="image">
-                    <p><a href='/login'>¿Ya tenés una cuenta? Iniciá sesión</a></p>
-                    <button type="submit">Crear cuenta</button>
-                </form>
-            </section>
-        </main>
-    </section>
-    <!-- Footer -->
-    <%- include('../partials/footer') %>
-</div>
-</body>
-</html>
+        <!-- Page content -->
+        <section class="form-register">
+            <h4>Completa tus datos</h4>
+            <main>
+                <section>
+                    <form action="/register" method="POST" class="formregister" enctype="multipart/form-data">
+                        <label> Nombre y Apellido</label>
+                        <input type="text" name="name" placeholder="Nombre y apellido"
+                            class="<%= locals.errors && errors.name ? 'is-invalid' : null %>"
+                            value="<%= locals.oldData ? oldData.name : null %>">
+                        <% if(locals.errors && errors.name) { %>
+                            <div>
+                                <%= errors.name.msg %>
+                            </div>
+                            <% } %>
+                                <label>Email</label>
+                                <input type="email" name="email" placeholder="Email"
+                                    class="<%= locals.errors && errors.email ? 'is-invalid' : null %>"
+                                    value="<%= locals.oldData ? oldData.email : null %>">
+                                <% if(locals.errors && errors.email) { %>
+                                    <div>
+                                        <%= errors.email.msg %>
+                                    </div>
+                                    <% } %>
+                                        <label>Contraseña</label>
+                                        <input type="password" name="password" placeholder="Contraseña"
+                                            class="<%= locals.errors && errors.password ? 'is-invalid' : null %>">
+                                        <% if(locals.errors && errors.password) { %>
+                                            <div>
+                                                <%= errors.password.msg %>
+                                            </div>
+                                            <% } %>
+                                                <label>Confirmar contraseña</label>
+                                                <input type="password" name="repassword"
+                                                    placeholder="Confirmar Contraseña"
+                                                    class="<%= locals.errors && errors.repassword ? 'is-invalid' : null %>">
+                                                <% if(locals.errors && errors.repassword) { %>
+                                                    <div>
+                                                        <%= errors.repassword.msg %>
+                                                    </div>
+                                                    <% } %>
+                                                        <label>Fecha de Nacimiento</label>
+                                                        <input type="date" name="birth"
+                                                            class="<%= locals.errors && errors.birth ? 'is-invalid' : null %>"
+                                                            value="<%= locals.oldData ? oldData.birth : null %>">
+                                                        <% if(locals.errors && errors.birth) { %>
+                                                            <div>
+                                                                <%= errors.birth.msg %>
+                                                            </div>
+                                                            <% } %>
+                                                                <label>Seleccione Avatar</label>
+                                                                <input type="file" name="image">
+                                                                <p><a href='/login'>¿Ya tenés una cuenta? Iniciá
+                                                                        sesión</a></p>
+                                                                <button type="submit">Crear cuenta</button>
+                    </form>
+                </section>
+            </main>
+        </section>
+        <!-- Footer -->
+        <%- include('../partials/footer') %>
