--- a/appWeb/src/views/users/register.ejs
+++ b/appWeb/src/views/users/register.ejs
@@ -19,47 +19,46 @@
                             <div>
                                 <%= errors.name.msg %>
                             </div>
-                            <% } %>
-                                <label>Email</label>
-                                <input type="email" name="email" placeholder="Email"
-                                    class="<%= locals.errors && errors.email ? 'is-invalid' : null %>"
-                                    value="<%= locals.oldData ? oldData.email : null %>">
+                        <% } %>
+                        <label>Email</label>
+                        <input type="email" name="email" placeholder="Email"
+                        class="<%= locals.errors && errors.email ? 'is-invalid' : null %>"
+                                value="<%= locals.oldData ? oldData.email : null %>">
                                 <% if(locals.errors && errors.email) { %>
                                     <div>
                                         <%= errors.email.msg %>
                                     </div>
-                                    <% } %>
-                                        <label>Contraseña</label>
-                                        <input type="password" name="password" placeholder="Contraseña"
-                                            class="<%= locals.errors && errors.password ? 'is-invalid' : null %>">
+                                <% } %>
+                        <label>Contraseña</label>
+                        <input type="password" name="password" placeholder="Contraseña"
+                                       class="<%= locals.errors && errors.password ? 'is-invalid' : null %>">
                                         <% if(locals.errors && errors.password) { %>
                                             <div>
                                                 <%= errors.password.msg %>
                                             </div>
-                                            <% } %>
-                                                <label>Confirmar contraseña</label>
-                                                <input type="password" name="repassword"
-                                                    placeholder="Confirmar Contraseña"
-                                                    class="<%= locals.errors && errors.repassword ? 'is-invalid' : null %>">
-                                                <% if(locals.errors && errors.repassword) { %>
-                                                    <div>
-                                                        <%= errors.repassword.msg %>
-                                                    </div>
-                                                    <% } %>
-                                                        <label>Fecha de Nacimiento</label>
-                                                        <input type="date" name="birth"
-                                                            class="<%= locals.errors && errors.birth ? 'is-invalid' : null %>"
-                                                            value="<%= locals.oldData ? oldData.birth : null %>">
-                                                        <% if(locals.errors && errors.birth) { %>
-                                                            <div>
-                                                                <%= errors.birth.msg %>
-                                                            </div>
-                                                            <% } %>
-                                                                <label>Seleccione Avatar</label>
-                                                                <input type="file" name="image">
-                                                                <p><a href='/login'>¿Ya tenés una cuenta? Iniciá
-                                                                        sesión</a></p>
-                                                                <button type="submit">Crear cuenta</button>
+                                        <% } %>
+                        <label>Confirmar contraseña</label>
+                        <input type="password" name="repassword"
+                                placeholder="Confirmar Contraseña"
+                                class="<%= locals.errors && errors.repassword ? 'is-invalid' : null %>">
+                                       <% if(locals.errors && errors.repassword) { %>
+                                            <div>
+                                                <%= errors.repassword.msg %>
+                                            </div>
+                                        <% } %>
+                        <label>Fecha de Nacimiento</label>
+                        <input type="date" name="birth"
+                                class="<%= locals.errors && errors.birth ? 'is-invalid' : null %>"
+                                value="<%= locals.oldData ? oldData.birth : null %>">
+                                        <% if(locals.errors && errors.birth) { %>
+                                            <div>
+                                              <%= errors.birth.msg %>
+                                            </div>
+                                        <% } %>
+                        <label>Seleccione Avatar</label>
+                        <input type="file" name="image">
+                        <p><a href='/login'>¿Ya tenés una cuenta? Iniciá sesión</a></p>
+                        <button type="submit">Crear cuenta</button>
                     </form>
                 </section>
             </main>
